--- a/shelter/pages/main/main.css
+++ b/shelter/pages/main/main.css
@@ -15,18 +15,22 @@
 
 body {
     font-family: "arial";
-    width: 1920px;
+    width: 1280px;
+   
 }
-
-.page1 {
+.a{
     background: url("../../assets/noise_transparent@2x.png"),
-        radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
+    radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
+}
+.page1 {
+    width: 1280px;
+    margin: 0 auto -45px;
 }
 
 header {
-
-
+ 
     display: flex;
+   
 
 }
 
@@ -44,7 +48,6 @@ header {
     font-family: "arial";
     font-size: 13px;
     font-weight: 400;
-
     color: #fff;
     letter-spacing: 0.1em;
     padding: 0 0px 0 4px;
@@ -54,9 +57,7 @@ header {
     display: flex;
     justify-content: space-between;
     width: 443px;
-
     list-style-type: none;
-
     padding: 0 0 0 0;
 }
 
@@ -95,20 +96,20 @@ header {
 
 .not-only {
     display: flex;
+  
 }
 
 .puppy {
-
     background-image: url("../../assets/start-screen-puppy.png");
     width: 698px;
+    background-repeat: no-repeat;
     display: block;
     height: 728px;
-    margin: 50px 0 0 41px;
+    margin: 46px 0 0 42px;
 }
 
 .not-only-block {
     width: 460px;
-
     margin: 212px 0px 0px 41px;
 }
 
@@ -133,7 +134,6 @@ header {
     color: #292929;
     font-size: 17px;
     font-family: "georgia";
-
     font-weight: normal;
     letter-spacing: 0.06em;
     border: 1px solid #F1CDB3;
@@ -151,4 +151,550 @@ header {
 
 .position-button {
     margin: 40px 0 0 -1px;
+}
+
+.about {
+    width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    padding: 0px 0 95px 68px;
+    justify-content: space-around;
+    
+}
+
+.cat-dog {
+    background-image: url(../../assets/about-pets.png);
+    display: block;
+    width: 300px;
+    height: 408px;
+    margin: 127px 0 0 72px;
+}
+
+.page2-text {
+    width: 430px;
+    margin: 144px 141px 0px -19px;
+}
+
+.page2-text>h1 {
+    font-family: 'georgia';
+    font-weight: 400;
+    width: 370px;
+    font-size: 35px;
+    line-height: 130%;
+    margin: 0px 5px 24px 0px;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.page2-text>p {
+    font-family: 'arial';
+    font-size: 15px;
+    line-height: 160%;
+    margin: 0 0px 27px 1px;
+    font-weight: normal;
+    color: #4C4C4C;
+}
+
+.page2-text>h3 {
+    font-family: 'arial';
+    font-size: 15px;
+    line-height: 160%;
+    margin: 0 0 0px 1px;
+    align-items: center;
+    font-weight: 400;
+    color: #4C4C4C;
+}
+
+.our-friends {
+    background: #F6F6F6;
+    width: 1280;
+    margin: 0 auto;
+    height: 877px;
+    padding: 0 68px 0 0px;
+}
+.wrap{
+    width: 1280px;
+    margin: 0 auto;
+}
+.page3-text {
+    width: 1200px;
+    position: absolute;
+    margin: 83px 0px 0px 41px;
+
+
+}
+
+.page3-text>h1 {
+    margin: 0 auto;
+    width: 400px;
+    display: flex;
+    text-align: center;
+    font-family: 'georgia';
+    font-weight: normal;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.page3-list {
+    position: absolute;
+    padding: 228px 0 0 0;
+}
+
+.photos {
+    display: flex;
+    list-style-type: none;
+}
+
+.button {
+    border: 2px solid #F1CDB3;
+    outline: none;
+    background: #F6F6F6;
+    border-radius: 71px;
+    line-height: 12px;
+    padding: 17px 17px;
+    height: 52.8px;
+    transition: 0.5s;
+}
+
+.button:hover {
+    background: #FDDCC4;
+}
+
+.white-rectangle {
+    background-color: #FAFAFA;
+    width: 270px;
+    height: 435px;
+    transition: 0.5s;
+}
+
+.white-rectangle:hover {
+    background-color: #fff;
+    box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+
+}
+
+.first-animal {
+    background-image: url(../../assets/cat.png);
+    display: block;
+    position: absolute;
+    margin: 30px 0px 0 34px;
+
+    Width: 200px;
+    Height: 240px;
+}
+
+.second-animal {
+    background-image: url(../../assets/white-dog.png);
+    display: block;
+    position: absolute;
+    margin: 30px 0px 0 34px;
+
+    Width: 200px;
+    Height: 240px;
+}
+
+.third-animal {
+    background-image: url(../../assets/yellow-dog.png);
+    display: block;
+    position: absolute;
+    margin: 30px 0px 0 34px;
+    Width: 200px;
+    Height: 240px;
+}
+
+.list-stile-item1 {
+    margin: 196px 0 0 0;
+}
+
+.list-stile-item2 {
+    margin: 2px 0px 0 53px;
+}
+
+.list-stile-item3 {
+    margin: 3px 0px 0 90px;
+}
+
+.list-stile-item4 {
+    margin: 3px 0px 0 90px;
+}
+
+.list-stile-item5 {
+    margin: 196px 0 0 53px;
+}
+
+.name-dog {
+    font-family: 'georgia';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 23px;
+    margin: 302px 0 0 98px;
+    position: absolute;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.name-dog1 {
+    font-family: 'georgia';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    position: absolute;
+    margin: 301px 0 0 93px;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.name-dog2 {
+    font-family: 'georgia';
+    font-style: normal;
+    font-weight: normal;
+    position: absolute;
+
+    font-size: 20px;
+    margin: 301px 0 0 101px;
+    line-height: 23px;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.learn-more {
+    border-radius: 100px;
+    border: 2px solid #F1CDB3;
+    width: 187px;
+    height: 52px;
+    margin: 355px 0 0 41px;
+    outline: none;
+    font-family: "georgia";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 130%;
+    color: #292929;
+    position: absolute;
+    background-color: #fff;
+    letter-spacing: 0.06em;
+    transition: 0.5s;
+}
+
+.learn-more:hover {
+    background-color: #FDDCC4;
+}
+
+.get-know {
+    position: absolute;
+    margin: 728px 0 0 510px;
+    transition: 0.5s;
+    font-family: 'georgia';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    letter-spacing: 0.06em;
+    color: #292929;
+    width: 261px;
+    height: 52px;
+    border-radius: 100px;
+    outline: none;
+    border: 3px solid #F1CDB3;
+    background: #F1CDB3;
+}
+
+.get-know:hover {
+    background: #FDDCC4;
+    border: 3px solid #FDDCC4;
+}
+
+.help {
+    width: 1280px;
+    margin: 0 auto;
+    padding: 0 70px 0 0;
+    height: 527px;
+}
+
+.help>h1 {
+    font-family: 'georgia';
+    width: 313px;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #545454;
+    margin: 84px 0 0 485px;
+}
+
+.help-list-block {
+    list-style-type: none;
+    display: flex;
+
+    margin: 58px 0px 0 86px;
+
+}
+
+.items {
+    font-family: 'georgia';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 115%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #545454;
+    margin: 26px 0 0 0px;
+}
+
+.help-list-block>li {
+    margin: 0 120px 0 0;
+
+
+    text-align: center;
+    align-items: center;
+}
+
+.items2 {
+    font-family: 'georgia';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 115%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #545454;
+    margin: 26px 0 0 7px;
+}
+
+.help-list-block2 {
+    list-style-type: none;
+    display: flex;
+    margin: 56px 0px 0 170px;
+
+}
+
+.help-list-block2>li {
+    margin: 0 120px 0 0;
+    text-align: center;
+    align-items: center;
+}
+
+.in-addition {
+   
+    background: #F6F6F6;
+   
+    
+
+   
+}
+.im{
+    padding: 0 70px 0 0;
+    display: flex; width: 1280px;
+    height: 464px; margin: 0 auto;
+}
+.dog-addition {
+    background-image: url(../../assets/donation-dog.png);
+    width: 505px;
+    height: 261px;
+    display: block;
+    margin: 95px 0 0 181px;
+    background-repeat: no-repeat;
+}
+
+.in-addition-block {
+    margin: 63px 0 0px 31px;
+}
+
+.in-addition-block>h1 {
+    font-family: 'georgia';
+    width: 300px;
+    height: 90px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 35px;
+    line-height: 130%;
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.in-addition-block>h2 {
+    width: 363px;
+    height: 17px;
+    font-family: 'georgia';
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 110%;
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
+.in-addition-block>a {
+    margin: 20px;
+}
+
+.number {
+    width: 349px;
+    display: flex;
+    height: 43px;
+    background: #F1CDB3;
+    border-radius: 9px;
+    transition: 0.5s;
+}
+
+.number:hover {
+    background: #FDDCC4;
+}
+
+.number-position {
+    margin: 12px 0 0 15px;
+    width: 274px;
+    height: 23px;
+}
+
+.card-position {
+    width: 30px;
+    margin: 10px 0 0 15px;
+    height: 23px;
+}
+
+.in-addition-block>p {
+    font-family: 'arial';
+    width: 380px;
+    height: 72px;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 12px;
+
+    line-height: 18px;
+    display: flex;
+    align-items: center;
+    color: #B2B2B2;
+
+}
+
+footer {
+    background: url(../../assets/noise_transparent@2x.png),
+    radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+    
+    
+}
+
+.last-page {
+    display: flex;
+    width: 1280px;
+    margin: 0 auto;
+    height: 355px;
+    padding: 0 70px 0 0;
+}
+
+.footer-list {
+    width: 278px;
+    height: 234px;
+    margin-top: 65px;
+    margin-right: 0px;
+    list-style-type: none;
+}
+
+.footer-item1 {
+    font-family: 'georgia';
+    font-style: normal;
+    width: 280px;
+    height: 90px;
+    font-weight: normal;
+    font-size: 35px;
+    margin: 0 0 0 0;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+}
+
+.footer-item2 {
+    display: flex;
+    
+    font-family: 'georgia';
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    text-decoration: none;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+}
+.footer-item2>p{
+    margin: 46px 0 0 60px;
+    
+}
+.icon1{
+    position: absolute;
+
+    margin: 41px 0 0 0px;
+
+}
+.footer-item3 {
+    display: flex;
+    font-family: 'georgia';
+    text-decoration: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+}
+.footer-item3>p{
+    margin: 51px 0 0 60px;
+    
+}
+.icon2{
+    position: absolute;
+    margin: 41px 0 0 0px;
+
+}
+.footer-list2 {
+    width: 278px;
+    height: 234px;
+    margin-top: 65px;
+    margin-left: 121px;
+    list-style-type: none;
+}
+.h{
+    position: absolute;
+    width: 317px;
+    height: 46px;
+    margin: -14px 0 0 -19px;
+}
+.icon3{
+    position: absolute;
+    margin: 41px 0 0 0px;
+
+}
+.footer-position{
+    margin: 51px 0 0 18px;
+}
+.icon4{
+    position: absolute;
+    margin: 108px 0 0 -1px;
+
+}
+.m>p{
+    margin: 114px 0 0 41px
+}
+.footer-pupy{
+    background-image:url(../../assets/footer-puppy.png);
+    display: block;
+    width: 300px;
+    margin: 39px 0 0 182px;
+    height: 315px;
 }
