--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -165,7 +165,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
