--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -137,7 +137,7 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
